Sultan - Fixed header removing extra gap between app header and dhis header

--- a/page.css
+++ b/page.css
@@ -3,18 +3,24 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: "Lucida Console", Monaco, monospace;
+    /*font-family: "Lucida Console", Monaco, monospace !important;*/
     font-size: 3mm;
 }
-* {
+ #app *{
     box-sizing: border-box;
     -moz-box-sizing: border-box;
+    font-family: "Lucida Console", Monaco, monospace;
 }
 .section{
     margin-bottom: 5mm;
 }
+
 #mainMenu{
-    margin-top:45px;
+    margin-top:45px;/*#TODO: Not a good thing to do, should find a better way to do this */
+}
+
+#mainMenu .panel-body {
+    font-family: "Lucida Console", Monaco, monospace !important;
 }
 .page {
     width: 210mm;
@@ -24,6 +30,7 @@ body {
     /*border-radius: 5px;*/
     background: white;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
+    font-family: inherit;
 }
 
 .register{
